--- a/src/app/modules/user/layouts/home/home.component.scss
+++ b/src/app/modules/user/layouts/home/home.component.scss
@@ -3,11 +3,11 @@
 }
 
 .mainHome {
-  height: 85%;
-  overflow-y: scroll;
+  padding-bottom: 8rem;
 }
 
 @media screen and (max-width: 768px) {
+
   .mw-50 {
     max-width: 100%;
   }
