--- a/src/app/modules/user/layouts/edit-profil/edit-profil.component.scss
+++ b/src/app/modules/user/layouts/edit-profil/edit-profil.component.scss
@@ -6,6 +6,7 @@
   height: 100px;
   object-fit: cover;
   background-size: cover;
+  background-position: center;
 
   @media (min-width: 425px) {
     width: 120px;
