--- a/src/app/modules/user/layouts/profil/profil.component.scss
+++ b/src/app/modules/user/layouts/profil/profil.component.scss
@@ -3,6 +3,7 @@
   height: 90px;
   object-fit: cover;
   background-size: cover;
+  background-position: center;
 
   @media (min-width: 425px) {
     width: 120px;
