--- a/src/app/modules/user/layouts/chat-list/chat-list.component.html
+++ b/src/app/modules/user/layouts/chat-list/chat-list.component.html
@@ -1,5 +1,5 @@
 <div class="container border rounded-1 mainContainer">
-  <div class="row h-100">
+  <div class="row">
     <div class="col-12 col-md-4">
       <div class="d-flex justify-content-between d-md-none">
         <div><h3>Mes conversations</h3></div>
