--- a/src/app/modules/user/layouts/home/components/card-image/card-image.component.html
+++ b/src/app/modules/user/layouts/home/components/card-image/card-image.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid my-3">
+<div class="container my-3">
   <div class="card rounded">
     <div class="card-header">
       <div class="row">
