--- a/src/app/modules/user/layouts/home/components/card-image/card-image.component.html
+++ b/src/app/modules/user/layouts/home/components/card-image/card-image.component.html
@@ -2,11 +2,13 @@
   <div class="card rounded">
     <div class="card-header">
       <div class="row">
-        <div class="col-8 d-flex align-items-center">
+        <div class="col-8 d-flex align-items-center" [routerLink]="['/user/profil/' + (user | async)?.id]">
           <div class="content-img" [style.background-image]="
               'url(' + (user | async)?.profilImage + ')'
             "></div>
-          <div class="ms-2">{{ (user | async)?.pseudo }}</div>
+          <div class="ms-2">
+            <a>{{ (user | async)?.pseudo }}</a>
+          </div>
         </div>
         <div class="col-4 d-flex align-items-center justify-content-end">
           <div class="tx-11 me-2 text-muted textDate">
