--- a/src/app/layouts/user-layout/navbar/navbar.component.html
+++ b/src/app/layouts/user-layout/navbar/navbar.component.html
@@ -1,5 +1,7 @@
 <div appClickOutside (clickedOutside)="handleChange()">
-  <div class="container pt-2 d-block d-md-none bg-light headerSmallScreen">
+  <div
+    class="container-fluid pt-2 d-block d-md-none bg-light headerSmallScreen"
+  >
     <div class="row d-flex align-items-center">
       <div class="col-4">
         <a class="text-dark h2" href="#"> Instaclo</a>
@@ -28,7 +30,7 @@
   </div>
 
   <nav class="navbar navbar-expand navbar-light bg-light">
-    <div class="container">
+    <div class="container-fluid">
       <a class="navbar-brand ms-3 h2 text-dark" href="#"
         ><img
           src="/assets/images/instaclo.png"
