--- a/src/app/modules/user/layouts/chat-list/chat-list.component.html
+++ b/src/app/modules/user/layouts/chat-list/chat-list.component.html
@@ -1,5 +1,5 @@
 <div class="container border rounded-1 mainContainer">
-  <div class="row">
+  <div class="row h-100">
     <div class="col-12 col-md-4">
       <div class="d-flex justify-content-between d-md-none">
         <div><h3>Mes conversations</h3></div>
@@ -27,7 +27,7 @@
     <div class="col-12 col-md-8 border-md-start colChat">
       <div
         *ngIf="chatRoomsForComponentChat !== undefined"
-        class="h-100"
+
         [ngClass]="!status ? 'd-block' : 'd-none d-md-block'"
       >
         <app-chat
