--- a/src/app/modules/user/layouts/chat/chat.component.html
+++ b/src/app/modules/user/layouts/chat/chat.component.html
@@ -1,88 +1,120 @@
-<div class="container">
-  <div class="row">
-    <div class="col-12">
-      <div class="card-header">
-        <div class="row align-items-center" *ngIf="chatRoomsForComponentChat.user.length > 0">
-          <div class="col-3 col-lg-2">
-            <img class="img imgProfil rounded-circle" src="{{ chatRoomsForComponentChat.user[0].profilImage }}" />
-          </div>
-          <div class="col-9 col-lg-10 ps-5 ps-md-0">
-            <strong class="">{{
-              chatRoomsForComponentChat.user[0].pseudo
-              }}</strong>
-          </div>
-          <hr class="mt-1" />
+<div class="row h-100">
+  <div class="col-12 colProfil">
+    <div class="card-header">
+      <div
+        class="row align-items-center"
+        *ngIf="chatRoomsForComponentChat.user.length > 0"
+      >
+        <div class="col-3 col-lg-2">
+          <img
+            class="img imgProfil rounded-circle"
+            src="{{ chatRoomsForComponentChat.user[0].profilImage }}"
+          />
         </div>
+        <div class="col-9 col-lg-10 ps-5 ps-md-0 ps-lg-2">
+          <strong class="">{{
+            chatRoomsForComponentChat.user[0].pseudo
+          }}</strong>
+        </div>
+        <hr class="mt-1" />
       </div>
     </div>
   </div>
-
-  <div class="row">
-    <div class="col-12">
-      <div class="messenger" [scrollTop]="messenger.scrollHeight" #messenger (swipeleft)="onSwipeLeft()" (swiperight)="onSwipeRight()" appClickOutsideMessage
-        (clickedOutside)="handleChange()">
-        <div class="mt-1" *ngFor="let message of messageRoom | async"
-          [ngClass]="user[0].uid === message.uid_user ? 'text-end' : 'text-start'" (swipeleft)="onSwipeLeft2(message.id)"
-          (swiperight)="onSwipeRight2()">
-          <span *ngIf="user[0].uid === message.uid_user; else MateMessage">
-            <span class="bulle">
-              <span *ngIf="toggle && message_id === message.id; else notDisabled">
-                <input type="text" value="{{ message.message }}" [disabled]="false" id="{{ message.id }}"
-                  name="newMessage" [(ngModel)]="message.message" />
-              </span>
-              <ng-template #notDisabled>
-                <input type="text" value="{{ message.message }}" [disabled]="true" id="{{ message.id }}" name="newMessage"
-                  [(ngModel)]="message.message" />
-              </ng-template>
+  <div class="col-12 colMessenger">
+    <div
+      class="messenger h-100 mt-1"
+      [scrollTop]="messenger.scrollHeight"
+      #messenger
+      (swipeleft)="onSwipeLeft()"
+      (swiperight)="onSwipeRight()"
+      appClickOutsideMessage
+      (clickedOutside)="handleChange()"
+    >
+      <div
+        class="mt-1 messengerChild"
+        *ngFor="let message of messageRoom | async"
+        [ngClass]="user[0].uid === message.uid_user ? 'text-end' : 'text-start'"
+        (swipeleft)="onSwipeLeft2(message.id)"
+        (swiperight)="onSwipeRight2()"
+      >
+        <span *ngIf="user[0].uid === message.uid_user; else MateMessage">
+          <span class="bulle">
+            <span *ngIf="toggle && message_id === message.id; else notDisabled">
+              <input
+                type="text"
+                value="{{ message.message }}"
+                [disabled]="false"
+                id="{{ message.id }}"
+                name="newMessage"
+                [(ngModel)]="message.message"
+              />
             </span>
-          </span>
-          <ng-template #MateMessage>
-            <span class="bulle">{{ message.message }}</span>
-          </ng-template>
-          <span class="text-end" *ngIf="showDate">
-            {{ message.date_created | date: "HH:mm" }}
-          </span>
-
-          <div *ngIf="
-              user[0].uid === message.uid_user &&
-              toggle &&
-              message_id === message.id
-            ">
-            <span>
-              <button class="btn btn-sm" type="button" (click)="update(message, message.message)"
-                [disabled]="message.message === ''">
-                modifier
-              </button>
-              |
-              <button class="btn btn-sm" (click)="delete(message.id)">
-                supprimer
-              </button>
-            </span>
-          </div>
-          <div class="mt-1">
-            <p *ngIf="user[0].uid === message.uid_user; else pseudoMessage">
-              <small>{{ user[0].pseudo }}</small>
-            </p>
-            <ng-template #pseudoMessage>
-              <p>
-                <small>{{ chatRoomsForComponentChat.user[0].pseudo }}</small>
-              </p>
+            <ng-template #notDisabled>
+              <input
+                type="text"
+                value="{{ message.message }}"
+                [disabled]="true"
+                id="{{ message.id }}"
+                name="newMessage"
+                [(ngModel)]="message.message"
+              />
             </ng-template>
-          </div>
+          </span>
+        </span>
+        <ng-template #MateMessage>
+          <span class="bulle">{{ message.message }}</span>
+        </ng-template>
+        <span class="text-end" *ngIf="showDate">
+          {{ message.date_created | date : "HH:mm" }}
+        </span>
+
+        <div
+          *ngIf="
+            user[0].uid === message.uid_user &&
+            toggle &&
+            message_id === message.id
+          "
+        >
+          <span>
+            <button
+              class="btn btn-sm"
+              type="button"
+              (click)="update(message, message.message)"
+              [disabled]="message.message === ''"
+            >
+              modifier
+            </button>
+            |
+            <button class="btn btn-sm" (click)="delete(message.id)">
+              supprimer
+            </button>
+          </span>
+        </div>
+        <div class="mt-1">
+          <p *ngIf="user[0].uid === message.uid_user; else pseudoMessage">
+            <small>{{ user[0].pseudo }}</small>
+          </p>
+          <ng-template #pseudoMessage>
+            <p>
+              <small>{{ chatRoomsForComponentChat.user[0].pseudo }}</small>
+            </p>
+          </ng-template>
         </div>
       </div>
     </div>
   </div>
-
-
-  <div class="row">
-    <div class="col-12">
-      <form (ngSubmit)="onSubmit()" class="mt-1">
-        <div class="input-group">
-          <input type="text" class="form-control" placeholder="Message" [formControl]="message" #messageInput />
-          <button class="btn btn-outline-secondary" type="submit">Envoyer</button>
-        </div>
-      </form>
-    </div>
+  <div class="col-12 pb-3">
+    <form (ngSubmit)="onSubmit()" class="mt-1">
+      <div class="input-group">
+        <input
+          type="text"
+          class="form-control"
+          placeholder="Message"
+          [formControl]="message"
+          #messageInput
+        />
+        <button class="btn btn-outline-secondary" type="submit">Envoyer</button>
+      </div>
+    </form>
   </div>
 </div>
