--- a/src/app/modules/user/layouts/chat/chat.component.scss
+++ b/src/app/modules/user/layouts/chat/chat.component.scss
@@ -4,48 +4,54 @@
   object-fit: cover;
   background-size: cover;
 
-  @media (max-width: 425px) {
+  @media (min-width: 425px) {
     width: 100px;
     height: 100px;
   }
 }
-.messenger {
-  height: 40vh;
-  //overflow-y: scroll;
-  max-height: auto;
-  overflow: auto;
-  @media screen and (min-height: 800px) {
-    height: 50vh;
+
+.colProfil {
+  height: 12vh;
+}
+.colMessenger {
+  height: 55vh;
+  @media screen and (min-width: 768px) {
+    height: 60vh;
   }
-  @media screen and (min-height: 1000px) {
-    height: 70vh;
+
+  .messenger {
+    touch-action: pan-y !important;
+    max-height: auto;
+    overflow-y: scroll;
+    input {
+      border: none;
+      background: none;
+      &:focus {
+        border: none;
+        outline: none !important;
+      }
+    }
+    .btn {
+      text-decoration: underline;
+      &:focus {
+        outline: none;
+        box-shadow: none;
+        border: none;
+      }
+    }
+
+    .messengerChild {
+      touch-action: pan-y !important;
+    }
   }
 }
-.messenger::-webkit-scrollbar {
-  display: none;
-}
+
+// .messenger::-webkit-scrollbar {
+//   display: none;
+// }
 
 .bulle {
   border: 1px solid #dee2e6;
   border-radius: 10px;
   padding: 3px;
-}
-
-.messenger {
-  input {
-    border: none;
-    background: none;
-    &:focus {
-      border: none;
-      outline: none !important;
-    }
-  }
-  .btn {
-    text-decoration: underline;
-    &:focus {
-      outline: none;
-      box-shadow: none;
-      border: none;
-    }
-  }
 }
