hide scroll bar +  remove padding in class (use in style)

--- a/src/app/modules/user/layouts/chat/chat.component.scss
+++ b/src/app/modules/user/layouts/chat/chat.component.scss
@@ -46,9 +46,9 @@
   }
 }
 
-// .messenger::-webkit-scrollbar {
-//   display: none;
-// }
+.messenger::-webkit-scrollbar {
+  display: none;
+}
 
 .bulle {
   border: 1px solid #dee2e6;
