--- a/src/app/modules/user/layouts/photos/photos.component.html
+++ b/src/app/modules/user/layouts/photos/photos.component.html
@@ -1,8 +1,7 @@
 <ng-container *ngIf="showCamera">
-  <div class="d-flex align-items-center justify-content-center h-100" *ngIf="!takePhotoClick">
+  <div class="videoContainer d-flex align-items-center justify-content-center" *ngIf="!takePhotoClick">
     <div class="container">
-      <div class="row">
-        <div class="col-12 text-center">
+        <div class="text-center">
           <video #videoPlayer>
           </video>
         </div>
@@ -23,18 +22,21 @@
             <i class="bi bi-camera"></i>
             <p class="d-none d-md-block">Take Photo</p>
           </button>
-        </div>
+          <button (click)="choosePhoto()" class="btn btn-outline-secondary flex mx-2">
+            <i class="bi bi-card-image"></i>
+            <p class="d-none d-md-block">choose Photo</p>
+          </button>
       </div>
     </div>
   </div>
 
-  <div class="d-flex align-items-center justify-content-center h-100">
-    <div class="container" *ngIf="takePhotoClick">
+  <div class="photoContainer d-flex align-items-center justify-content-center" *ngIf="takePhotoClick">
+    <div class="container" >
       <div class="row">
         <div class="col-12 text-center mt-2">
           <img #imageDisplay class="img-fluid">
         </div>
-        <div class="col-12">
+        <div class="col-12 mt-4">
           <form [formGroup]="postForm" (ngSubmit)="onContinue()">
             <div class="container text-center">
               <mat-form-field class="inputStyle">
