--- a/src/app/modules/user/layouts/profil/components/card-image-profil/card-image-profil.component.html
+++ b/src/app/modules/user/layouts/profil/components/card-image-profil/card-image-profil.component.html
@@ -1,6 +1,10 @@
 <div class="card rounded h-100">
   <img class="img-fluid img-thumbnail w-100 h-100" [src]="image.path" alt="" />
-  <div class="bg-light border p-2 fw-bold">
+  <div
+    class="bg-light border p-2 fw-bold"
+    (click)="openDialogLike()"
+    style="cursor: pointer"
+  >
     {{ image.like.length }} Like
   </div>
   <div class="p-2">
@@ -14,12 +18,18 @@
         <i class="bi bi-heart-fill" [style.color]="likedImage"></i>
         <div class="d-none d-md-block ms-2">Like</div>
       </a>
-      <a (click)="openDialog()" class="d-flex align-items-center text-muted me-4">
+      <a
+        (click)="openDialog()"
+        class="d-flex align-items-center text-muted me-4"
+      >
         <i class="bi bi-chat-dots"></i>
         <div class="d-none d-md-block ms-2">Comment</div>
       </a>
-      <a (click)="delete(image.id)" class="d-flex align-items-center text-muted me-4"
-        *ngIf="currentUser.id === image.userID">
+      <a
+        (click)="delete(image.id)"
+        class="d-flex align-items-center text-muted me-4"
+        *ngIf="currentUser.id === image.userID"
+      >
         <i class="bi bi-trash"></i>
       </a>
     </div>
