cursor pointer add

--- a/src/app/modules/user/layouts/home/components/card-image/card-image.component.html
+++ b/src/app/modules/user/layouts/home/components/card-image/card-image.component.html
@@ -5,6 +5,7 @@
         <div
           class="col-8 d-flex align-items-center"
           [routerLink]="['/user/profil/' + (user | async)?.id]"
+          style="cursor: pointer"
         >
           <div
             class="content-img"
