--- a/src/app/layouts/user-layout/navbar/navbar.component.html
+++ b/src/app/layouts/user-layout/navbar/navbar.component.html
@@ -78,6 +78,7 @@
             </a>
           </li>
           <li class="nav-item">
+            {{ numberChat }}
             <a class="nav-link" [routerLink]="['/user/chat']"
               ><i class="bi bi-send"></i>
             </a>
