--- a/src/app/modules/user/layouts/profil/components/card-image-profil/card-image-profil.component.scss
+++ b/src/app/modules/user/layouts/profil/components/card-image-profil/card-image-profil.component.scss
@@ -1,7 +1,7 @@
 .more-description {
   margin-top: 0.5rem;
   font-size: 0.8rem;
-  color: #999 !important;
+  color: #1d6ff0 !important;
   cursor: pointer;
 }
 
