--- a/src/app/modules/user/layouts/photos/photos.component.scss
+++ b/src/app/modules/user/layouts/photos/photos.component.scss
@@ -5,7 +5,7 @@
     video {
       object-fit: cover;
       width: 100%;
-      height: 716px;
+      height: 70vh;
     }
     @media (min-width: 768px) {
       video {
@@ -30,7 +30,7 @@
     img {
       object-fit: cover;
       width: 100%;
-      height: 716px;
+      height: 70vh;
       }
 
       @media (min-width: 768px) {
