--- a/src/app/layouts/user-layout/navbar/navbar.component.html
+++ b/src/app/layouts/user-layout/navbar/navbar.component.html
@@ -4,7 +4,7 @@
   >
     <div class="row d-flex align-items-center">
       <div class="col-4">
-        <a class="text-dark h2" href="#"> Instaclo</a>
+        <a class="text-dark h2" [routerLink]="['/user/home']"> Instaclo</a>
       </div>
       <div class="col-8">
         <form class="d-flex flex-column">
@@ -31,7 +31,7 @@
 
   <nav class="navbar navbar-expand navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand ms-3 h2 text-dark" href="#"
+      <a class="navbar-brand ms-3 h2 text-dark" [routerLink]="['/user/home']"
         ><img
           src="/assets/images/instaclo.png"
           width="36"
